using spawn_clickhouse_inserter_and_backup

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,8 @@ revm-primitives = { version = "21.0.2", default-features = false }
 revm-interpreter = { version = "29.0.1", default-features = false }
 
 # rbuilder
-rbuilder-primitives = { git = "https://github.com/flashbots/rbuilder", tag = "v1.3.1" }
-rbuilder-utils = { git = "https://github.com/flashbots/rbuilder", tag = "v1.3.1", features = [
+rbuilder-primitives = { git = "https://github.com/flashbots/rbuilder",  rev = "95323c0c6b1ac742a5716aba1942f3e06b8b5241" }
+rbuilder-utils = { git = "https://github.com/flashbots/rbuilder",  rev = "95323c0c6b1ac742a5716aba1942f3e06b8b5241" , features = [
   "test-utils"
 ] }
 
