--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,8 @@ revm-primitives = { version = "21.0.2", default-features = false }
 revm-interpreter = { version = "29.0.1", default-features = false }
 
 # rbuilder
-rbuilder-primitives = { git = "https://github.com/flashbots/rbuilder", rev = "95323c0c6b1ac742a5716aba1942f3e06b8b5241" }
-rbuilder-utils = { git = "https://github.com/flashbots/rbuilder", rev = "95323c0c6b1ac742a5716aba1942f3e06b8b5241", features = [
+rbuilder-primitives = { git = "https://github.com/flashbots/rbuilder", rev = "e3b49692d5b4353c62abe828245a44c390f7bec2" }
+rbuilder-utils = { git = "https://github.com/flashbots/rbuilder", rev = "e3b49692d5b4353c62abe828245a44c390f7bec2", features = [
   "test-utils"
 ] }
 
@@ -34,6 +34,7 @@ tokio = { version = "1", default-features = false, features = [
   "macros"
 ] }
 futures = { version = "0.3" }
+tokio-util = "0.7.12"
 
 # allocator
 tikv-jemallocator = { version = "0.6", optional = true }
